# build-your-own-tools

./: .gitattributes  .gitignore  .golangci.yml  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE  Makefile  README.GLM.md  README.en.md  README.md  README.zh-CN.md  SECURITY.zh-CN.md  deny.toml  go.work  go.work.sum  index.md  lighthouserc.js  package-lock.json  package.json  release-notes.md  tsconfig.json
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  coverage.yml  docs.yml  pages-advanced.yml  pages.yml  release.yml  security.yml
.omc/: project-memory.json
.omc/sessions/: dff36605-1b3b-4025-9bb0-ea72ebd6138e.json
.omc/state/: agent-replay-724a8a63-4392-489b-87ae-a25d5b248a73.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.opencode/commands/: opsx-apply.md  opsx-propose.md
.vitepress/: config.mts  config.ts
changelog/: 2026-02-13-project-overhaul.md  2026-03-10-pages-optimization.md  2026-03-13_rustfmt-line-ending-fix.md  2026-03-13_workflow-pages-install-fix.md
comparison/: benchmarks.md  memory.md
docs/: ARCHITECTURE.md  COMPARISON.md  README.md  README.zh-CN.md  index.md
dos2unix/: .gitattributes  Cargo.toml  README.md
en/: engineering  index.md  whitepaper
engineering/: index.md
gzip/: README.md
htop/: README.md  index.md
openspec/: config.yaml
public/: manifest.json  robots.txt
specs/: htop.md  openspec-workflow.md
whitepaper/: architecture.md  index.md
(+215 files in other folders)
