[workspace]
resolver = "2"
members = [
    "dos2unix",
    "gzip/rust",
    "htop/unix/rust",
    "htop/win/rust",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
sysinfo = "0.29"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
anyhow = "1.0"
